
             • Correct negative y-axis, the minimum is now the real
               minimum.

         • ‘plot_GrowthCurve()’

             • Reduce number of confusing warning,

             • add new argument ‘mode’ to select the calculation mode
               of the function.  This allows in particular to only fit
               data without calculating a De or calculating a De
               assuming an additive dose reponse curve.

         • ‘plot_RadialPlot()’

             • Sometimes the function crashed with an out of bonds
               error if more than one data set was provided; fixed,

             • argument ‘negatives’ caused an error if not set to
               ‘'remove'’ and fix some errors around this option,

             • De-adjustment for negative values optimised for large
               scatter.

         • ‘plot_RLum.Data.Spectrum()’

             • The interactive plot option was broken with the last
               update of the package 'plotly'; fixed.

         • ‘read_BIN2R()’

             • If BIN-files are automatically imported the function
               skipped non BIN-files without crashing if it is used in
               combination with the argument ‘pattern’.

         • ‘template_DRAC()’

             • Fixed a typo in the column names (#28).

         • ‘use_DRAC()’

             • Now supports DRAC v1.2 and the newly introduced CSV
               input template.  Older v1.1 excel sheet input templates
               are still supported, but users are highly encouraged to
               use the new CSV file.

             • Columns in the output tables are now assigned proper
               classes (#27).

  Internals:

         • The internal function converting BIN-file curves to
           RLum.Data.Curve() objects had been optimised and, amongst
           others, now uses a function written using Rcpp to create the
           curve matrix.  The conversion now works ca. two times
           faster,
